src/objects/Overtime_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manger__c</fullName>
        <label>Manger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <label>Stop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workforce_Management__c</fullName>
        <label>Workforce Management</label>
        <referenceTo>Workforce_Management__c</referenceTo>
        <relationshipLabel>Overtime Requests</relationshipLabel>
        <relationshipName>Overtime_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X30_Min_Lunch__c</fullName>
        <label>30 Min Lunch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Overtime Request</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Overtime Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overtime Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>